Fixed the visual bug where you could see table content in the th border-radius gaps

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -13,10 +13,10 @@ nav {
     height: 56px;
     width: 100%;
     background-color: rgba(0, 0, 0, 0.3);
-    padding: 0.3rem;
+    padding: 0.3rem 6rem;
     display: flex;
     align-items: center;
-    gap: 2rem;
+    gap: var(--space-xs);
 }
 
 nav img {
