--- a/src/components/Table/Table.module.css
+++ b/src/components/Table/Table.module.css
@@ -1,43 +1,31 @@
 .table {
     --table-bg: #121212;
     --alternate-row: #1A1A1A;
-    /*--border: var(--dark);*/
     --border: #4B3FA7;
-}
 
-.table {
     border-collapse: collapse;
     margin: 0;
     font-size: 0.9rem;
-    /* change min-width */
     width: max-content;
     max-width: 100%;
     min-width: 400px;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.20);
     background-color: var(--table-bg);
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
 }
 
-
-.table thead th {
-    top: 0;
-    position: sticky;
-    z-index: 10;
-    background-color: var(--primary);
-
-}
-
-
-.table thead tr:nth-child(2) th {
-    top:  42px; /* use a variable instead of magic number */
-    background: #2E0F6C;
-    z-index: 11;
-}
-
-
+/* ----- Header ----- */
 .table thead tr {
-    background-color: var(--primary);
+    background-color: var(--table-bg);
     color: var(--text);
     text-align: center;
+}
+
+.table thead th {
+    position: sticky;
+    top: 0;
+    z-index: 10;
+    background-color: var(--primary);
+    padding: 12px 15px;
 }
 
 .table thead tr:first-child th {
@@ -45,6 +33,11 @@
     border-radius: 15px 15px 0 0;
 }
 
+.table thead tr:nth-child(2) th {
+    top: 42px;
+    background: #2E0F6C;
+    z-index: 11;
+}
 
 .table thead tr:last-child {
     background-color: #2E0F6C;
@@ -57,7 +50,9 @@
     font-weight: normal;
 }
 
-.table th, .table td {
+/* ----- Body ----- */
+.table th,
+.table td {
     padding: 12px 15px;
 }
 
@@ -75,5 +70,5 @@
 
 .table tbody tr.active-row {
     font-weight: bold;
-    color: var(--primary)
+    color: var(--primary);
 }
